# shear_psf_leakage

./: .gitignore  pyproject.toml
notebooks/: leakage_PSF_auto_spin.py  leakage_autocorr_psf.py  leakage_autorr_psf.py  leakage_object.py  leakage_scale.py  leakage_scale_spin.py  leakage_scale_test_weights.py  leakage_xi_sys.py
shear_psf_leakage/: correlation.py  leakage.py  leakage_scale.py  plots.py  rho_tau_cov.py  rho_tau_stat.py  run_object.py  run_scale.py
tests/: test_leakage_object.py  test_rho_tau_stats.py  test_shear_psf_leakage.py
